option java_outer_classname="ResponseSessionIdProtocol";
package Alachisoft.NosDB.Common.Protobuf;
option java_package = "com.alachisoft.nosdb.common.protobuf";

message ResponseSessionId
{
	optional string routerSessionId = 1;
	optional string clientSessionId = 2;
}